--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -4,19 +4,15 @@
   "compatibility": ">=12.4.0",
   "sdk": 3,
   "platforms": ["local"],
+  "brandColor": "#007eff",
   "name": {
-    "en": "Ensy Homey"
+    "en": "Ensy Ventilation"
   },
   "description": {
-    "en": "Connect to your Ensy ventilation device"
+    "en": "Adds support for controlling your Ensy ventilation device"
   },
   "category": ["climate"],
   "permissions": [],
-  "images": {
-    "small": "/assets/images/small.png",
-    "large": "/assets/images/large.png", 
-    "xlarge": "/assets/images/xlarge.png"
-  },
   "author": {
     "name": "Rein Undheim",
     "email": "rein@undheim.io"
