Update Ensy Homey app for improved heating control and code organization
- Changed the title for the heating capability from "Heating" to "Turn on/off" for clarity
- Refactored device code to use a more generic capability key for heating state
- Added a comment in the generated app.json file to indicate it should not be edited directly

These changes enhance the user interface and maintainability of the Ensy Homey app.

--- a/app.json
+++ b/app.json
@@ -235,7 +235,7 @@
         },
         "onoff.heating": {
           "title": {
-            "en": "Heating"
+            "en": "Turn on/off"
           }
         }
       },
